<resources>
    <string name="app_name">Infocontrol</string>
    <string name="usuario_n_de_identidad">Usuario o Nº de Identidad</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="recordarme_en_este_dispositivo">Recordarme</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="menu_empresas">Empresas</string>
    <string name="menu_habilitar">Habilitar I/E</string>
    <string name="nombre_empresa">Nombre de la empresa</string>
    <string name="iniciando_sesi_n">Iniciando sesión</string>
    <string name="volver">Volver</string>
    <string name="seleccione_un_recurso_a_consultar">Seleccione un recurso a consultar</string>
    <string name="numero_de_identificacion">N° de identificación</string>
    <string name="buscar">Buscar</string>
    <string name="escanear_qr">Ingreso con QR/DNI</string>
    <string name="empleados">Empleados</string>
    <string name="ve_culos">Vehículos</string>
    <string name="inhabilitado">Inhabilitado</string>
    <string name="estadocontratista">estadoContratista</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="email_cuil">Ingrese E-mail o Cuil registrado</string>
    <string name="email">Email</string>
    <string name="enviar">Enviar</string>
    <string name="buscar_persona">Buscar empresa</string>
    <string name="actualizar_base_de_datos">Actualizar Base de Datos</string>
    <string name="fecha_ultima_actualizaci_n">Fecha ultima actualización</string>
    <string name="nombre_de_la_empresa">Nombre de la Empresa</string>
    <string name="el_empelado_se_encuentra_registrado_en_m_s_de_un_contratista_seleccione_uno_para_continuar">El empelado se encuentra registrado en más de un contratista, seleccione uno para continuar:</string>
    <string name="cancelar">Cancelar</string>
    <string name="olvido_su_contrasenia">¿Olvido su contraseña?</string>
    <string name="todo">TODO</string>
    <string name="seleccione_una_empresa">Seleccione una empresa</string>
    <string name="habilitar_ingresos_egresos">Habilitar Ingresos / Egresos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deslice_hacia_abajo_para_actualizar_la_base_de_datos">Deslice hacia abajo para actualizar la base de datos</string>
    <string name="wait_a_moment">Aguarde un momento por favor</string>
</resources>
