<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.BuscarActivity">


  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <com.google.android.material.button.MaterialButton
          android:id="@+id/btnCancelar"
          style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:paddingStart="5dp"
          android:text="@string/volver"
          android:textAllCaps="false"
          app:icon="@drawable/ic_keyboard_arrow_left_black"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="RtlSymmetry" />

      <TextView
          android:id="@+id/tvNombreDeLaEmpresa"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:text="@string/nombre_de_la_empresa"
          android:textAlignment="center"
          android:textColor="@color/colorPrimary"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/btnCancelar" />

      <TextView
          android:id="@+id/textView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:text="@string/seleccione_un_recurso_a_consultar"
          android:textAlignment="center"
          android:textColor="@color/colorPrimary"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tvNombreDeLaEmpresa" />

      <RadioGroup
          android:id="@+id/radioGroup"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="24dp"
          android:checkedButton="@+id/first"
          android:orientation="vertical"
          app:layout_constraintStart_toStartOf="@+id/btnCancelar"
          app:layout_constraintTop_toBottomOf="@+id/textView">

          <RadioButton
              android:id="@+id/rbEmpleados"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/empleados" />

          <RadioButton
              android:id="@+id/rbVeiculos"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/ve_culos" />
      </RadioGroup>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilBuscar"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:hint="@string/numero_de_identificacion"
          app:helperText="Sin puntos, guiones ni espacios"
          app:helperTextEnabled="true"
          app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/radioGroup"
          app:layout_constraintTop_toTopOf="@+id/radioGroup">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/tietBuscar"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:maxLines="1" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/btnBuscar"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/buscar"
          android:textAllCaps="false"
          app:layout_constraintEnd_toEndOf="@+id/tilBuscar"
          app:layout_constraintStart_toStartOf="@+id/radioGroup"
          app:layout_constraintTop_toBottomOf="@+id/tilBuscar" />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/btnEscanearQR"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/escanear_qr"
          android:textAllCaps="false"
          app:layout_constraintEnd_toEndOf="@+id/btnBuscar"
          app:layout_constraintStart_toStartOf="@+id/btnBuscar"
          app:layout_constraintTop_toBottomOf="@+id/btnBuscar" />

      <TextView
          android:id="@+id/tvFechaDeActualizacion"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/fecha_ultima_actualizaci_n"
          android:textAlignment="center"
          android:textStyle="italic"
          app:layout_constraintEnd_toEndOf="@+id/btnEscanearQR"
          app:layout_constraintStart_toStartOf="@+id/btnEscanearQR"
          app:layout_constraintTop_toBottomOf="@+id/btnEscanearQR" />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/btnActualizarBD"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/actualizar_base_de_datos"
          android:textAllCaps="false"
          app:layout_constraintEnd_toEndOf="@+id/tvFechaDeActualizacion"
          app:layout_constraintStart_toStartOf="@+id/tvFechaDeActualizacion"
          app:layout_constraintTop_toBottomOf="@+id/tvFechaDeActualizacion" />

      <TextView
          android:id="@+id/tvOpcional"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:animateLayoutChanges="true"
          android:text="@string/el_empelado_se_encuentra_registrado_en_m_s_de_un_contratista_seleccione_uno_para_continuar"
          android:textColor="@color/colorPrimary"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="@+id/btnActualizarBD"
          app:layout_constraintStart_toStartOf="@+id/btnActualizarBD"
          app:layout_constraintTop_toBottomOf="@+id/btnActualizarBD" />

      <ListView
          android:id="@+id/listaOpiones"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:animateLayoutChanges="true"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="@+id/tvOpcional"
          app:layout_constraintStart_toStartOf="@+id/tvOpcional"
          app:layout_constraintTop_toBottomOf="@+id/tvOpcional" />
  </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/progressLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#EEFFFFFF"
        android:orientation="vertical">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wait_a_moment"
            android:textAlignment="center"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>