<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".ui.activity.RenderActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVolverRender"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/volver"
        android:paddingLeft="5dp"
        android:textAllCaps="false"
        app:icon="@drawable/ic_keyboard_arrow_left_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/inhabilitado"
        android:textAlignment="center"
        android:textColor="@color/md_white_1000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVolverRender" />

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="155dp"
        android:layout_height="198dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvEstado"
        app:layout_constraintStart_toStartOf="@+id/tvEstado"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado"
        app:srcCompat="@drawable/ic_worker" />

    <TextView
        android:id="@+id/tvEstadoContratista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/estadocontratista"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivFoto"
        app:layout_constraintStart_toStartOf="@+id/ivFoto"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstadoContratista"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/llVistaDeDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical" />

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>