<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/dialog"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/inhabilitado"
        android:textAlignment="center"
        android:textColor="@color/md_white_1000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="155dp"
        android:layout_height="198dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvEstado"
        app:layout_constraintStart_toStartOf="@+id/tvEstado"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado"
        app:srcCompat="@drawable/ic_worker" />

    <TextView
        android:id="@+id/tvEstadoContratista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/estadocontratista"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivFoto"
        app:layout_constraintStart_toStartOf="@+id/ivFoto"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistroIngesoEgreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstadoContratista">

        <LinearLayout
            android:id="@+id/llVistaDeDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical" />

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistroIngesoEgreso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Registrando egreso ingreso"
        android:textAllCaps="false"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--<TextView
        android:id="@+id/tvInformacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="Registrando Ingreso"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/progress_bar_ly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:background="#88FFFFFF"
        android:orientation="vertical">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="match_parent"
            android:text="@string/wait_a_moment"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>